@@ -11,6 +11,9 @@
    src/project.c:
    Add possibility to detect the indentation width from the file content
    (not supported if indentation type is tabs only).
+ * plugins/splitwindow.c:
+   Enable code folding in splitview window (based on a patch by Matthew
+   Brush, thanks! - closes #3097780).
 
 
 2011-03-25  Colomban Wendling  <colomban(at)geany(dot)org>
